JDK8 Shenandoah support.